# ETL_pipeline_YSE

./: .gitignore  EXPERIMENT_RESULTS.md  README.md  pyproject.toml  request_to_server.py
cache/: coffee.json  sanitary_pad.json
integration_tests/: README.md  config.toml  conftest.py
integration_tests/src/services/: test_extracted_search_dao.py  test_last_extracted_user_status_dao.py  test_raw_search_dao.py  test_user_dao.py
integration_tests/src/utils/: clear_tables.py  engine.py  fetch.py  insert.py
local_config/: config.toml
prototypes/: prototype_one_recursive_bs4.py
src/: etl_pipeline.py
src/models/: extracted_search_results.py  extracted_text.py  extracted_text_group.py  last_extracted_user_status.py  search_results.py  text_classification_enum.py  user.py
src/prototypes/: prototype_one_recursive_bs4.py
src/service/dao/: extracted_search_dao.py  last_extracted_user_status_dao.py  raw_search_dao.py  user_dao.py
src/service/extractors/: bs4_extractor.py  search_result_extractor_abc.py
src/utils/: basic_bs4_extract_text_utils.py  construct_connection_string.py  file_cache.py  get_search_results.py  html2text_extract_text_utils.py  recursive_bs4_extract_text_utils.py
unit_tests/src/services/dao/: test_extracted_search_dao.py
unit_tests/src/services/extractors/: test_bs4_extractors.py
utils/: basic_bs4_extract_text_utils.py  file_cache.py  get_search_results.py  html2text_extract_text_utils.py  logger_utils.py  recursive_bs4_extract_text_utils.py
