[tool.poetry]
name="prototype_etl"
description="Exploratory ETL pipeline"
authors = ["Elson Chan <elsonccj@gmail.com>"]
version = "0.1.0"
packages = [
    {include = "src"}
]

# dependencies used to spin up server goes here
[tool.poetry.dependencies]
python = "^3.11"    # any version 3.11 to < 4
requests = "^2.31.0"    # any version 2.31.0 to < 3.0.0
pydantic = "^2.4.2"
spacy = "^3.7.4"
bs4 = "^0.0.2"
html2text = "^2024.2.26"
lxml = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^23.9.1"     # accepts any latest version
ruff = "^0.0.292"
mypy = "^1.5.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true