[tool.poetry]
name="prototype_etl"
description="Exploratory ETL pipeline"
authors = ["Elson Chan <elsonccj@gmail.com>"]
version = "0.1.0"
packages = [
    {include = "src"},
]

# dependencies used to spin up server goes here
[tool.poetry.dependencies]
python = "^3.11"    # any version 3.11 to < 4
requests = "^2.31.0"    # any version 2.31.0 to < 3.0.0
pydantic = "^2.4.2"
spacy = "^3.7.4"
bs4 = "^0.0.2"
html2text = "^2024.2.26"
lxml = "^5.2.1"
selenium = "^4.20.0"
validators = "^0.28.1"
python-dateutil = "^2.9.0.post0"
types-beautifulsoup4 = "^4.12.0.20240504"
types-requests = "^2.31.0.20240406"
toml = "^0.10.2"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
retry = "^0.9.2"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
types-toml = "^0.10.8.20240310"
types-retry = "^0.9.9.4"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"     # accepts any latest version
ruff = "^0.4.4"
mypy = "^1.5.1"
pytest = "^8.2.0"
pytest-asyncio-cooperative = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
exclude = ["venv"]

[tool.ruff]
ignore = ["E501"]